--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.2",
     "underscore": "~1.6.0",
-    "validator": "~1.1.1"
+    "validator": "~1.1.1",
+    "request" : "2.40.0",
+    "curlrequest" : "0.5.1"
   },
   "repository": {
     "type": "git",
