--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "jQuery":"",
     "gsap":"1.13.1",
     "angular-ui-chart": "latest"
+    // angular-wysiwyg" 
   },
   "devDependencies": {
     "angular-mocks": "~1.2.12"
