--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "gsap":"1.13.1",
     "angular-ui-chart": "latest",
     "textAngular": "", 
-    "bootstrap-color-picker" : ""
+    "angular-file-upload" : ""
   },
   "devDependencies": {
     "angular-mocks": "~1.2.12"
