--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-ui-chart": "latest",
     "textAngular": "",
     "angular-file-upload": "",
-    "angular-local-storage": ""
+    "angular-local-storage": "",
+    "simpleWeather": "3.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.12"
